convert records from strings to numberred records

--- a/canova-nd4j/canova-nd4j-nlp/pom.xml
+++ b/canova-nd4j/canova-nd4j-nlp/pom.xml
@@ -37,6 +37,11 @@
     <dependencies>
         <dependency>
             <groupId>org.nd4j</groupId>
+            <artifactId>canova-nd4j-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.nd4j</groupId>
             <artifactId>canova-data-nlp</artifactId>
             <version>${project.version}</version>
         </dependency>
