Add NativeImageLoader that uses JavaCV to load images
- Make BaseImageLoader abstract and use it inside BaseImageRecordReader and VideoRecordReader
- Eliminate ImageIO dependency from BaseImageRecordReader and ImageNetRecordReader

--- a/canova-nd4j/canova-nd4j-image/pom.xml
+++ b/canova-nd4j/canova-nd4j-image/pom.xml
@@ -86,6 +86,22 @@
             <version>3.1.1</version>
            
         </dependency>
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv</artifactId>
+            <version>1.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.1.0-1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
