--- a/canova-cli/pom.xml
+++ b/canova-cli/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>canova-parent</artifactId>
     <groupId>org.nd4j</groupId>
-    <version>0.0.0.15-SNAPSHOT</version>
+    <version>0.0.0.15</version>
   </parent>
   <packaging>jar</packaging>
   <modelVersion>4.0.0</modelVersion>
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.nd4j</groupId>
       <artifactId>nd4j-api</artifactId>
-      <version>${nd4j.version}</version>
+      <version>0.4-rc3.9</version>
     </dependency>
     <dependency>
       <groupId>org.nd4j</groupId>
@@ -104,7 +104,7 @@
     <dependency>
       <groupId>org.nd4j</groupId>
       <artifactId>nd4j-native</artifactId>
-      <version>${nd4j.version}</version>
+      <version>0.4-rc3.9</version>
       <!--<scope>test</scope>-->
     </dependency>
   </dependencies>
@@ -195,8 +195,8 @@
                 <mapping>
                   <directory>/usr/local/lib/canova/</directory>
                   <filemode>755</filemode>
-                  <dependency/>
-                  <artifact/>
+                  <dependency />
+                  <artifact />
                 </mapping>
                 <mapping>
                   <directory>/usr/local/bin/</directory>
