--- a/canova-nd4j/canova-nd4j-codec/pom.xml
+++ b/canova-nd4j/canova-nd4j-codec/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>canova-nd4j</artifactId>
         <groupId>org.nd4j</groupId>
-        <version>0.0.0.15-SNAPSHOT</version>
+        <version>0.0.0.15</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -49,12 +49,12 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-api</artifactId>
-            <version>${nd4j.version}</version>
+            <version>0.4-rc3.9</version>
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native</artifactId>
-            <version>${nd4j.version}</version>
+            <version>0.4-rc3.9</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
