--- a/canova-nd4j/canova-nd4j-image/pom.xml
+++ b/canova-nd4j/canova-nd4j-image/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>canova-nd4j</artifactId>
         <groupId>org.nd4j</groupId>
-        <version>0.0.0.15-SNAPSHOT</version>
+        <version>0.0.0.15</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -34,13 +34,13 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native</artifactId>
-            <version>${nd4j.version}</version>
+            <version>0.4-rc3.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-buffer</artifactId>
-            <version>${nd4j.version}</version>
+            <version>0.4-rc3.9</version>
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
