--- a/canova-nd4j/pom.xml
+++ b/canova-nd4j/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.nd4j</groupId>
         <artifactId>canova-parent</artifactId>
-        <version>0.0.0.15-SNAPSHOT</version>
+        <version>0.0.0.15</version>
     </parent>
 
     <modules>
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-api</artifactId>
-            <version>${nd4j.version}</version>
+            <version>0.4-rc3.9</version>
         </dependency>
     </dependencies>
 
