--- a/canova-spark/pom.xml
+++ b/canova-spark/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>canova-parent</artifactId>
         <groupId>org.nd4j</groupId>
-        <version>0.0.0.15-SNAPSHOT</version>
+        <version>0.0.0.15</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -46,7 +44,7 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native</artifactId>
-            <version>${nd4j.version}</version>
+            <version>0.4-rc3.9</version>
             <scope>test</scope>
         </dependency>
 
