--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <packaging>pom</packaging>
 
-    <version>0.0.0.15-SNAPSHOT</version>
+    <version>0.0.0.15</version>
     <modules>
         <module>canova-api</module>
         <module>canova-nd4j</module>
@@ -170,7 +170,7 @@
         <connection>scm:git:git@github.com:SkymindIO/Canova.git</connection>
         <developerConnection>scm:git:git@github.com:SkymindIO/Canova.git</developerConnection>
         <url>git@github.com:SkymindIO/Canova.git</url>
-        <tag>HEAD</tag>
+        <tag>canova-parent-0.0.0.15</tag>
     </scm>
 
     <licenses>
