Put back nd4j version variable and updated to snapshot

--- a/canova-nd4j/canova-nd4j-image/pom.xml
+++ b/canova-nd4j/canova-nd4j-image/pom.xml
@@ -34,13 +34,13 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native</artifactId>
-            <version>0.4-rc3.9</version>
+            <version>${nd4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-buffer</artifactId>
-            <version>0.4-rc3.9</version>
+            <version>${nd4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
