--- a/canova-cli/pom.xml
+++ b/canova-cli/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.nd4j</groupId>
       <artifactId>nd4j-api</artifactId>
-      <version>0.4-rc3.9</version>
+      <version>${nd4j.version}</version>
     </dependency>
     <dependency>
       <groupId>org.nd4j</groupId>
@@ -104,7 +104,7 @@
     <dependency>
       <groupId>org.nd4j</groupId>
       <artifactId>nd4j-native</artifactId>
-      <version>0.4-rc3.9</version>
+      <version>${nd4j.version}</version>
       <!--<scope>test</scope>-->
     </dependency>
   </dependencies>
