--- a/canova-camel/pom.xml
+++ b/canova-camel/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-csv</artifactId>
+            <version>${camel.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.4</version>
@@ -119,19 +125,6 @@
                 </executions>
             </plugin>
 
-            <!-- to generate the MANIFEST-FILE of the bundle -->
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-SymbolicName>org.nd4j.canova-camel</Bundle-SymbolicName>
-                        <Export-Service>org.apache.camel.spi.ComponentResolver;component=canova</Export-Service>
-                    </instructions>
-                </configuration>
-            </plugin>
 
         </plugins>
     </build>
