--- a/canova-camel/pom.xml
+++ b/canova-camel/pom.xml
@@ -115,13 +115,13 @@
                         </goals>
                         <phase>generate-resources</phase>
                     </execution>
-                    <execution>
+                  <!--  <execution>
                         <id>validate</id>
                         <goals>
                             <goal>validate-components</goal>
                         </goals>
                         <phase>prepare-package</phase>
-                    </execution>
+                    </execution>-->
                 </executions>
             </plugin>
 
