Enhance BalancedPathFilter by interlacing the output to facilitate batching

--- a/canova-nd4j/canova-nd4j-image/pom.xml
+++ b/canova-nd4j/canova-nd4j-image/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>ffmpeg</artifactId>
             <version>3.0.2-1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>leptonica</artifactId>
+            <version>1.73-1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
