--- a/canova-camel/pom.xml
+++ b/canova-camel/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <camel.version><v></v>2.16.3</camel.version>
+        <camel.version>2.16.3</camel.version>
     </properties>
 
     <dependencies>
