--- a/canova-camel/pom.xml
+++ b/canova-camel/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>canova-parent</artifactId>
         <groupId>org.nd4j</groupId>
-        <version>0.0.0.17-SNAPSHOT</version>
+        <version>0.0.0.17</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
