--- a/canova-cli/pom.xml
+++ b/canova-cli/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>canova-parent</artifactId>
     <groupId>org.nd4j</groupId>
-    <version>0.0.0.17-SNAPSHOT</version>
+    <version>0.0.0.17</version>
   </parent>
   <packaging>jar</packaging>
   <modelVersion>4.0.0</modelVersion>
