--- a/canova-api/pom.xml
+++ b/canova-api/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>canova-parent</artifactId>
         <groupId>org.nd4j</groupId>
-        <version>0.0.0.17</version>
+        <version>0.0.0.18-SNAPSHOT</version>
     </parent>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
