--- a/canova-data/pom.xml
+++ b/canova-data/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>canova-parent</artifactId>
         <groupId>org.nd4j</groupId>
-        <version>0.0.0.17</version>
+        <version>0.0.0.18-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
