--- a/canova-nd4j/canova-nd4j-image/pom.xml
+++ b/canova-nd4j/canova-nd4j-image/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>canova-nd4j</artifactId>
         <groupId>org.nd4j</groupId>
-        <version>0.0.0.17</version>
+        <version>0.0.0.18-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
