--- a/canova-nd4j/pom.xml
+++ b/canova-nd4j/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.nd4j</groupId>
         <artifactId>canova-parent</artifactId>
-        <version>0.0.0.17</version>
+        <version>0.0.0.18-SNAPSHOT</version>
     </parent>
 
     <modules>
