--- a/pom.xml
+++ b/pom.xml
@@ -42,21 +42,31 @@
     <url>http://nd4j.org</url>
 
     <description>Vectorization Rosetta Stone for the JVM</description>
-
-    <developers>
-        <developer>
-            <id>agibsonccc</id>
-            <name>Adam Gibson</name>
-            <email>0@blix.io</email>
-        </developer>
-        <developer>
-            <id>jpatanooga</id>
-            <name>Josh Patterson</name>
-            <email>josh@floe.tv</email>
-        </developer>
-    </developers>
-
     <properties>
+        <nd4j.version>0.4.1-SNAPSHOT</nd4j.version>
+        <canova.version>0.0.0.18-SNAPSHOT</canova.version>
+        <datavec.version>0.4.1-SNAPSHOT</datavec.version>
+        <commonsmath.version>3.4.1</commonsmath.version>
+        <commonslang.version>3.3.1</commonslang.version>
+        <commonsio.version>2.4</commonsio.version>
+        <args4j.version>2.0.29</args4j.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <junit.version>4.12</junit.version>
+        <logback.version>1.1.2</logback.version>
+        <jackson.version>2.5.1</jackson.version>
+        <lombok.version>1.16.4</lombok.version>
+        <cleartk.version>2.0.0</cleartk.version>
+        <dropwizard.version>0.8.0</dropwizard.version>
+        <lucene.version>5.3.1</lucene.version>
+        <json.version>20131018</json.version>
+        <google.protobuf.version>2.6.1</google.protobuf.version>
+        <failIfNoTests>false</failIfNoTests>
+        <scala.binary.version>2.10</scala.binary.version>
+        <hadoop.version>1.0.4</hadoop.version>
+        <camel.version>2.16.3</camel.version>
+        <zookeeper.version>3.4.6</zookeeper.version>
+        <kafka.version>0.8.2.2</kafka.version>
+        <spark.version>1.5.2</spark.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.7</slf4j.version>
         <nd4j.version>0.4.1-SNAPSHOT</nd4j.version>
@@ -67,26 +77,9 @@
         <commons-math3.version>3.3</commons-math3.version>
         <commons-io.version>2.4</commons-io.version>
         <args4j.version>2.0.29</args4j.version>
-        <scala.binary.version>2.11</scala.binary.version>
-        <scala.version>2.11.7</scala.version>
     </properties>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>nexus-releases</id>
-            <name>Nexus Release Repository</name>
-            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
-
-
     <profiles>
-
         <profile>
             <id>qa</id>
             <build>
@@ -168,7 +161,210 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>scala-2.11</id>
+            <activation>
+                <property>
+                    <name>scala.binary.version</name>
+                    <value>2.11</value>
+                </property>
+            </activation>
+            <properties>
+                <scala.version>2.11.7</scala.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                    <version>2.11.7</version>
+                </dependency>
+            </dependencies>
+            <dependencyManagement>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>org.scala-lang</groupId>
+                        <artifactId>scala-library</artifactId>
+                        <version>${scala.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.kafka</groupId>
+                        <artifactId>kafka_${scala.binary.version}</artifactId>
+                        <version>${kafka.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.spark</groupId>
+                        <artifactId>spark-streaming_${scala.binary.version}</artifactId>
+                        <version>${spark.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.spark</groupId>
+                        <artifactId>spark-streaming-kafka_${scala.binary.version}</artifactId>
+                        <version>${spark.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.kafka</groupId>
+                        <artifactId>kafka_${scala.binary.version}</artifactId>
+                        <version>${kafka.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.kafka</groupId>
+                        <artifactId>kafka-clients</artifactId>
+                        <version>${kafka.version}</version>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>net.alchim31.maven</groupId>
+                        <artifactId>scala-maven-plugin</artifactId>
+                        <version>3.2.2</version>
+                        <configuration>
+                            <scalaVersion>${scala.version}</scalaVersion>
+                            <args>
+                                <arg>-deprecation</arg>
+                                <arg>-explaintypes</arg>
+                            </args>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>scala-compile-first</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>add-source</goal>
+                                    <goal>compile</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>scala-test-compile</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>add-source</goal>
+                                    <goal>testCompile</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>scala-2.10</id>
+            <activation>
+                <property>
+                    <name>scala.binary.version</name>
+                    <value>2.10</value>
+                </property>
+            </activation>
+            <dependencyManagement>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>org.scala-lang</groupId>
+                        <artifactId>scala-library</artifactId>
+                        <version>${scala.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.kafka</groupId>
+                        <artifactId>kafka_${scala.binary.version}</artifactId>
+                        <version>${kafka.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.spark</groupId>
+                        <artifactId>spark-streaming_${scala.binary.version}</artifactId>
+                        <version>${spark.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.spark</groupId>
+                        <artifactId>spark-streaming-kafka_${scala.binary.version}</artifactId>
+                        <version>${spark.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.kafka</groupId>
+                        <artifactId>kafka_${scala.binary.version}</artifactId>
+                        <version>${kafka.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.kafka</groupId>
+                        <artifactId>kafka-clients</artifactId>
+                        <version>${kafka.version}</version>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+            <properties>
+                <scala.version>2.10.6</scala.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                    <version>2.10.6</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>net.alchim31.maven</groupId>
+                        <artifactId>scala-maven-plugin</artifactId>
+                        <version>3.2.2</version>
+                        <configuration>
+                            <scalaVersion>${scala.version}</scalaVersion>
+                            <args>
+                                <arg>-deprecation</arg>
+                                <arg>-explaintypes</arg>
+                            </args>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>scala-compile-first</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>add-source</goal>
+                                    <goal>compile</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>scala-test-compile</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>add-source</goal>
+                                    <goal>testCompile</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
+    <developers>
+        <developer>
+            <id>agibsonccc</id>
+            <name>Adam Gibson</name>
+            <email>0@blix.io</email>
+        </developer>
+        <developer>
+            <id>jpatanooga</id>
+            <name>Josh Patterson</name>
+            <email>josh@floe.tv</email>
+        </developer>
+    </developers>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus snapshot repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <scm>
         <connection>scm:git:git@github.com:SkymindIO/Canova.git</connection>
         <developerConnection>scm:git:git@github.com:SkymindIO/Canova.git</developerConnection>
