--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,6 @@
         <failIfNoTests>false</failIfNoTests>
         <scala.binary.version>2.10</scala.binary.version>
         <hadoop.version>1.0.4</hadoop.version>
-        <camel.version>2.16.3</camel.version>
         <zookeeper.version>3.4.6</zookeeper.version>
         <kafka.version>0.8.2.2</kafka.version>
         <spark.version>1.5.2</spark.version>
@@ -77,9 +76,24 @@
         <commons-math3.version>3.3</commons-math3.version>
         <commons-io.version>2.4</commons-io.version>
         <args4j.version>2.0.29</args4j.version>
+        <camel.version>2.16.3</camel.version>
     </properties>
 
     <profiles>
+            <profile>
+                <id>scala-2.11</id>
+                <activation>
+                    <property>
+                        <name>scala-2.11</name>
+                    </property>
+                </activation>
+                <properties>
+                    <scala.version>2.11.7</scala.version>
+                    <scala.binary.version>2.11</scala.binary.version>
+                </properties>
+            </profile>
+
+
         <profile>
             <id>qa</id>
             <build>
@@ -154,183 +168,6 @@
                                 <id>attach-javadocs</id>
                                 <goals>
                                     <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>scala-2.11</id>
-            <activation>
-                <property>
-                    <name>scala.binary.version</name>
-                    <value>2.11</value>
-                </property>
-            </activation>
-            <properties>
-                <scala.version>2.11.7</scala.version>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-library</artifactId>
-                    <version>2.11.7</version>
-                </dependency>
-            </dependencies>
-            <dependencyManagement>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>org.scala-lang</groupId>
-                        <artifactId>scala-library</artifactId>
-                        <version>${scala.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.kafka</groupId>
-                        <artifactId>kafka_${scala.binary.version}</artifactId>
-                        <version>${kafka.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.spark</groupId>
-                        <artifactId>spark-streaming_${scala.binary.version}</artifactId>
-                        <version>${spark.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.spark</groupId>
-                        <artifactId>spark-streaming-kafka_${scala.binary.version}</artifactId>
-                        <version>${spark.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.kafka</groupId>
-                        <artifactId>kafka_${scala.binary.version}</artifactId>
-                        <version>${kafka.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.kafka</groupId>
-                        <artifactId>kafka-clients</artifactId>
-                        <version>${kafka.version}</version>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>net.alchim31.maven</groupId>
-                        <artifactId>scala-maven-plugin</artifactId>
-                        <version>3.2.2</version>
-                        <configuration>
-                            <scalaVersion>${scala.version}</scalaVersion>
-                            <args>
-                                <arg>-deprecation</arg>
-                                <arg>-explaintypes</arg>
-                            </args>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>scala-compile-first</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>add-source</goal>
-                                    <goal>compile</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>scala-test-compile</id>
-                                <phase>process-test-resources</phase>
-                                <goals>
-                                    <goal>add-source</goal>
-                                    <goal>testCompile</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>scala-2.10</id>
-            <activation>
-                <property>
-                    <name>scala.binary.version</name>
-                    <value>2.10</value>
-                </property>
-            </activation>
-            <dependencyManagement>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>org.scala-lang</groupId>
-                        <artifactId>scala-library</artifactId>
-                        <version>${scala.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.kafka</groupId>
-                        <artifactId>kafka_${scala.binary.version}</artifactId>
-                        <version>${kafka.version}</version>
-                    </dependency>
-
-                    <dependency>
-                        <groupId>org.apache.spark</groupId>
-                        <artifactId>spark-streaming_${scala.binary.version}</artifactId>
-                        <version>${spark.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.spark</groupId>
-                        <artifactId>spark-streaming-kafka_${scala.binary.version}</artifactId>
-                        <version>${spark.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.kafka</groupId>
-                        <artifactId>kafka_${scala.binary.version}</artifactId>
-                        <version>${kafka.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.kafka</groupId>
-                        <artifactId>kafka-clients</artifactId>
-                        <version>${kafka.version}</version>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
-            <properties>
-                <scala.version>2.10.6</scala.version>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-library</artifactId>
-                    <version>2.10.6</version>
-                </dependency>
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>net.alchim31.maven</groupId>
-                        <artifactId>scala-maven-plugin</artifactId>
-                        <version>3.2.2</version>
-                        <configuration>
-                            <scalaVersion>${scala.version}</scalaVersion>
-                            <args>
-                                <arg>-deprecation</arg>
-                                <arg>-explaintypes</arg>
-                            </args>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>scala-compile-first</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>add-source</goal>
-                                    <goal>compile</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>scala-test-compile</id>
-                                <phase>process-test-resources</phase>
-                                <goals>
-                                    <goal>add-source</goal>
-                                    <goal>testCompile</goal>
                                 </goals>
                             </execution>
                         </executions>
