--- a/canova-spark/pom.xml
+++ b/canova-spark/pom.xml
@@ -12,8 +12,33 @@
     <properties>
         <spark.version>1.5.2</spark.version>
     </properties>
+    <name>canova-spark_${scala.binary.version}</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
